@@ -4,10 +4,11 @@ import static java.util.Objects.nonNull;
 import static org.folio.ld.dictionary.PredicateDictionary.INSTANTIATES;
 import static org.folio.ld.dictionary.ResourceTypeDictionary.INSTANCE;
 
-import java.util.Collections;
 import java.util.Set;
-import org.folio.linked.data.domain.dto.InstanceReference;
-import org.folio.linked.data.domain.dto.Work;
+import org.folio.linked.data.domain.dto.IdField;
+import org.folio.linked.data.domain.dto.InstanceResponse;
+import org.folio.linked.data.domain.dto.WorkRequest;
+import org.folio.linked.data.domain.dto.WorkResponse;
 import org.folio.linked.data.exception.NotFoundException;
 import org.folio.linked.data.exception.ValidationException;
 import org.folio.linked.data.mapper.dto.common.CoreMapper;
@@ -18,10 +19,13 @@ import org.folio.linked.data.repo.ResourceRepository;
 import org.springframework.stereotype.Component;
 
 @Component
-@MapperUnit(type = INSTANCE, predicate = INSTANTIATES, dtoClass = InstanceReference.class)
+@MapperUnit(type = INSTANCE, predicate = INSTANTIATES, requestDto = IdField.class)
 public class InstanceReferenceMapperUnit implements SingleResourceMapperUnit {
 
-  private static final Set<Class<?>> SUPPORTED_PARENTS = Collections.singleton(Work.class);
+  private static final Set<Class<?>> SUPPORTED_PARENTS = Set.of(
+    WorkRequest.class,
+    WorkResponse.class
+  );
 
   private final CoreMapper coreMapper;
   private final ResourceRepository resourceRepository;
@@ -33,20 +37,20 @@ public class InstanceReferenceMapperUnit implements SingleResourceMapperUnit {
 
   @Override
   public <P> P toDto(Resource source, P parentDto, Resource parentResource) {
-    if (parentDto instanceof Work work) {
-      var instanceReference = coreMapper.toDtoWithEdges(source, InstanceReference.class, false);
-      instanceReference.setId(String.valueOf(source.getId()));
-      work.addInstanceReferenceItem(instanceReference);
+    if (parentDto instanceof WorkResponse work) {
+      var instanceResponse = coreMapper.toDtoWithEdges(source, InstanceResponse.class, false);
+      instanceResponse.setId(String.valueOf(source.getId()));
+      work.addInstanceReferenceItem(instanceResponse);
     }
     return parentDto;
   }
 
   @Override
   public Resource toEntity(Object dto, Resource parentEntity) {
-    var instance = (InstanceReference) dto;
-    if (nonNull(instance.getId())) {
-      return resourceRepository.findById(Long.parseLong(instance.getId()))
-        .orElseThrow(() -> new NotFoundException("Instance with id [" + instance.getId() + "] is not found"));
+    var instanceIdField = (IdField) dto;
+    if (nonNull(instanceIdField.getId())) {
+      return resourceRepository.findById(Long.parseLong(instanceIdField.getId()))
+        .orElseThrow(() -> new NotFoundException("Instance with id [" + instanceIdField.getId() + "] is not found"));
     } else {
       throw new ValidationException("Instance id", "null");
     }
